--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -21,7 +21,7 @@ steps:
     gcloud components install kubectl
     gsutil cp gs://kube-key/kubeconfig .
     export KUBECONFIG=kubeconfig
-    kubectl set image deployment/video-thumbnails-generator --namespace=webtor video-thumbnails-generator=rg.fr-par.scw.cloud/webtor/$REPO_NAME:$REVISION_ID
+    kubectl set image deployment/$REPO_NAME --namespace=webtor $REPO_NAME=rg.fr-par.scw.cloud/webtor/$REPO_NAME:$REVISION_ID
 secrets:
 - kmsKeyName: "projects/vibrant-arcanum-201111/locations/global/keyRings/my/cryptoKeys/my"
   secretEnv:
